k8s/infra/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: loans
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
        logtype: json
    spec:
      containers:
        - name: kibana
          image: kibana:9.5.3
          resources:
            limits:
              cpu: 1000m
            requests:
              cpu: 100m
          ports:
            - containerPort: 5601

---

apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: loans
  labels:
    app: kibana
spec:
  selector:
    app: kibana
  ports:
    - name: http
      port: 5601

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: loans
spec:
  ingressClassName: nginx
  rules:
    - host: kibana.osber.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
