k8s/infra/prometheus.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: loans
  name: prometheus
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v3.15.0
          args:
            - --config.file=/prometheus2/prometheus.yml
            - --storage.tsdb.path=/prometheus/
            - --web.enable-lifecycle
          ports:
            - containerPort: 9090
              name: http
          volumeMounts:
            - name: prometheus-storage-volume
              mountPath: /prometheus/
            - name: prometheus-config-map
              mountPath: /prometheus2/
      volumes:
        - name: prometheus-storage-volume
          emptyDir: { }
        - name: prometheus-config-map
          configMap:
            name: prometheus

---

apiVersion: v1
kind: Service
metadata:
  namespace: loans
  name: prometheus
spec:
  selector:
    app: prometheus
  ports:
    - port: 9090

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: loans
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.osber.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
