k8s/infra/rabbitmq.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: loans
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.13.1-management-alpine
          ports:
            - containerPort: 15672
              name: http
            - containerPort: 5672
              name: amqp
            - containerPort: 15692
              name: prometheus
          volumeMounts:
            - name: rabbitmq-definitions-config-map
              mountPath: /etc/rabbitmq/definitions.json
              subPath: definitions.json
            - name: rabbitmq-conf-config-map
              mountPath: /etc/rabbitmq/rabbitmq.conf
              subPath: rabbitmq.conf
      volumes:
        - name: rabbitmq-conf-config-map
          configMap:
            name: rabbitmq-conf
        - name: rabbitmq-definitions-config-map
          configMap:
            name: rabbitmq-definitions

---

apiVersion: v1
kind: Service
metadata:
  namespace: loans
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - port: 15672
      name: http
    - port: 5672
      name: amqp
    - port: 15692
      name: prometheus

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: loans
spec:
  ingressClassName: nginx
  rules:
    - host: rabbitmq.osber.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
