k8s/infra/vault.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: loans
  name: vault
  labels:
    app: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
        - name: vault
          image: hashicorp/vault:2.1.1
          ports:
            - containerPort: 8200

---

apiVersion: v1
kind: Service
metadata:
  namespace: loans
  name: vault
  labels:
    app: vault
spec:
  selector:
    app: vault
  ports:
    - name: http
      port: 8200

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: loans
spec:
  ingressClassName: nginx
  rules:
    - host: vault.osber.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
